# docs/swagger.yaml
@@ -1,9 +1,146 @@
-basePath: /
-host: localhost:8080
+components:
+  schemas:
+    dto.LoginRequest:
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+      type: object
+    dto.LoginResponse:
+      properties:
+        token:
+          type: string
+        user:
+          $ref: '#/components/schemas/dto.UserResponse'
+      type: object
+    dto.RegisterRequest:
+      properties:
+        confirm_password:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
+      type: object
+    dto.RegisterResponse:
+      properties:
+        user:
+          $ref: '#/components/schemas/dto.UserResponse'
+      type: object
+    dto.UserResponse:
+      properties:
+        created_at:
+          type: string
+        email:
+          type: string
+        id:
+          type: string
+        updated_at:
+          type: string
+      type: object
+externalDocs:
+  description: ""
+  url: ""
 info:
-  contact: {}
   description: Collaborative task management API for development teams.
   title: Tandem API
   version: "1.0"
-paths: {}
-swagger: "2.0"
+openapi: 3.1.0
+paths:
+  /api/v1/auth/login:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              oneOf:
+              - type: object
+              - $ref: '#/components/schemas/dto.LoginRequest'
+                description: Login payload
+                summary: request
+        description: Login payload
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/dto.LoginResponse'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: Bad Request
+        "401":
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: Unauthorized
+        "500":
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: Internal Server Error
+      summary: Login a user
+      tags:
+      - auth
+  /api/v1/auth/register:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              oneOf:
+              - type: object
+              - $ref: '#/components/schemas/dto.RegisterRequest'
+                description: Registration payload
+                summary: request
+        description: Registration payload
+        required: true
+      responses:
+        "201":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/dto.RegisterResponse'
+          description: Created
+        "400":
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: Bad Request
+        "409":
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: Conflict
+        "500":
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: Internal Server Error
+      summary: Register a new user
+      tags:
+      - auth
+servers:
+- url: http://localhost:8080/
